# drive-mount

./: .gitignore  AGENTS.md  ONEDRIVE_IMPLEMENTATION_PLAN.md  README.md  build-and-install.ps1  build-installer.ps1  download-rclone.ps1  download-winfsp.ps1  index.html  package.json
.cargo/: config.toml
.codex/: sim-preview.html
.codex/DerivedData-device/: info.plist
.codex/DerivedData-ios/: info.plist
.codex/DerivedData-live-b2/: info.plist
.codex/DerivedData-sim/: info.plist
.codex/DerivedData-simulator/: info.plist
.github/workflows/: build-release.yml
B2DriveMount/: App.xaml  App.xaml.cs  AppSettings.cs  B2DriveMount.csproj  LogService.cs  MainWindow.xaml  MainWindow.xaml.cs  RcloneManager.cs  SettingsService.cs  StartupManager.cs  TrayIconManager.cs
CloudDriveMount/: App.xaml.cs  AppSettings.cs  LogService.cs  RcloneManager.cs  SettingsService.cs
installer/: CloudDriveMount.installer.wixproj  Files.wxs  Package.wxs
ios/: README.md
ios/DriveMountApp/: AddConnectionView.swift  ConnectionEditorView.swift  ConnectionListViewModel.swift  ContentView.swift  DriveMount.entitlements  DriveMountApp.swift
ios/DriveMountFileProvider/: DriveMountFileProviderExtension.swift  FileProviderEnumerator.swift  FileProviderItem.swift  Info.plist
ios/DriveMountShared/: AppConstants.swift  B2RemoteFileBrowser.swift  CloudConnection.swift  CloudProvider.swift  ConnectionStore.swift  Diagnostics.swift  FixtureRemoteFileBrowser.swift  GoogleDriveRemoteFileBrowser.swift  HTTPClient.swift  OneDriveRemoteFileBrowser.swift  ProviderItemCache.swift  ProviderItemKey.swift  RemoteFileBrowser.swift  RemoteFileItem.swift
ios/DriveMountTests/: DriveMountTests.swift
scripts/: build-and-install.ps1  build-installer.ps1  build-open-installer.mjs  download-rclone.mjs
src/: copyButtonFeedback.ts  driveLetters.ts  logs.ts  main.ts  mountSettings.ts  styles.css  types.ts  validation.ts  windowSizing.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  lib.rs  logging.rs  macos_menu_bar_icon.rs  models.rs  notifications.rs  paths.rs  settings.rs
src-tauri/src/rclone/: config.rs  discovery.rs  mod.rs  process.rs
src-tauri/src/rclone/platform/: macos.rs  mod.rs  windows.rs
src-tauri/tests/: installer_config.rs
tauri/: README.md  index.html  package.json
tests/: copyButtonFeedback.test.ts  driveLetters.test.ts  mountSettings.test.ts
(+3957 files in other folders)
